--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,11 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Cloudflare R2 (S3-compatible object storage for datasets)
+CLOUDFLARE_R2_ACCESS_KEY_ID=
+CLOUDFLARE_R2_SECRET_ACCESS_KEY=
+CLOUDFLARE_R2_BUCKET=datos-escobar
+CLOUDFLARE_R2_ENDPOINT=https://<ACCOUNT_ID>.r2.cloudflarestorage.com
+CLOUDFLARE_R2_URL=https://<YOUR_PUBLIC_BUCKET_DOMAIN>
+
 VITE_APP_NAME="${APP_NAME}"
